@@ -817,13 +817,6 @@ void findnextfile(const char *needle)
     selected = currselected;
 }
 
-/* Abort the current filename search.  Clean up by setting the current
- * shortcut list to the browser shortcut list, and displaying it. */
-void filesearch_abort(void)
-{
-    bottombars(MBROWSER);
-}
-
 /* Search for a filename. */
 void do_filesearch(void)
 {
@@ -833,7 +826,7 @@ void do_filesearch(void)
 
     if (filesearch_init() != 0) {
 	/* Cancelled or a blank search string. */
-	filesearch_abort();
+	bottombars(MBROWSER);
 	return;
     }
 
@@ -852,7 +845,7 @@ void do_filesearch(void)
 
     findnextfile(answer);
 
-    filesearch_abort();
+    bottombars(MBROWSER);
 }
 
 /* Search for the last given filename again without prompting. */
@@ -865,8 +858,6 @@ void do_fileresearch(void)
 	statusbar(_("No current search pattern"));
     else
 	findnextfile(last_search);
-
-    filesearch_abort();
 }
 
 /* Select the first file in the list. */
