@@ -14,6 +14,7 @@
 	* src/{browser,files,help,prompt,text,winio}.c: Let the function
 	bottombars() set the global variable 'currmenu' -- the displayed
 	menu must necessarily be the active one.
+	* src/browser.c (filesearch_abort): Elide this function.
 
 2015-04-05  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/texinfo/nano.texi: Expand on nano's features, condense the
